# sqlx-bulk-insert-and-where-in-query-example

./: Cargo.toml  README.md  create_people_table.sql  docker-compose.yml
src/: main.rs
