[package]
name = "sqlx-bulk-insert-and-where-in-query-example"
version = "0.1.0"
authors = ["dyoshikawa <dyoshikawa1993@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
sqlx = { version = "0.3", default-features = false, features = [ "mysql", "runtime-tokio", "macros" ] }
